--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "sass-loader": "^10.1.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "swiper": "^6.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
@@ -22,6 +23,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
